---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE1520 [*] `@singledispatchmethod` decorator should not be used on non-method functions
 --> singledispatchmethod_function.py:4:1
  |
4 | @singledispatchmethod  # [singledispatchmethod-function]
  | ^^^^^^^^^^^^^^^^^^^^^
5 | def convert_position(position):
6 |     pass
  |
help: Replace with `@singledispatch`
  |
1 ~ from functools import singledispatchmethod, singledispatch
2 |
3 |
4 ~ @singledispatch  # [singledispatchmethod-function]
  |
note: This is an unsafe fix and may change runtime behavior
